scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,53 @@
 input[type="search"]::-webkit-search-cancel-button {
   display: none;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: none;
+  border-radius: none;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: none;
+}
+
+/* WebKit (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background: none;
+  border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: none;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: none;
+  scrollbar-color: none;
+}
+
+/* Internet Explorer */
+* {
+  scrollbar-width: none;
+  scrollbar-base-color: none;
+}
